# instatools

./: .gitignore  README_SETUP.md  cookies.py  instagram_session  pyproject.toml  setup-venv.ps1  setup-venv.sh
FollowersExtractor/: README.md  followers_extractor.py
